<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/cordinatelay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".DetailsActivity">
    <android.support.design.widget.AppBarLayout
        style="@style/layout"
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            style="@style/layout"
            android:id="@+id/tool"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:id="@+id/primg"
                android:transitionName="image"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="8dp"/>
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/detailtool"
                android:layout_gravity="bottom"
                app:popupTheme="@style/AppTheme">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <LinearLayout
                style="@style/layout"
                android:orientation="horizontal">

                <TextView
                    style="@style/mainlay"
                    android:layout_margin="5dp"
                    android:text="@string/updated_at"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="italic" />
                <TextView
                    style="@style/mainlay"
                    android:layout_margin="5dp"
                    android:id="@+id/tv1"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorblack"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                style="@style/layout"
                android:orientation="horizontal">
                <TextView
                    style="@style/mainlay"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/brand"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    style="@style/mainlay"
                    android:layout_margin="5dp"
                    android:id="@+id/tv2"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorblack"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                style="@style/layout"
                android:orientation="horizontal">
                <TextView
                    android:layout_margin="5dp"
                    style="@style/mainlay"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/name"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    android:layout_margin="5dp"
                    style="@style/mainlay"
                    android:id="@+id/tv3"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorblack"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                style="@style/layout"
                android:orientation="horizontal">
                <TextView
                    android:layout_margin="5dp"
                    style="@style/mainlay"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/price"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    android:layout_margin="5dp"
                    style="@style/mainlay"
                    android:id="@+id/tv4"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorblack"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                style="@style/layout"
                android:orientation="horizontal">
                <TextView
                    style="@style/mainlay"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/rating"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    style="@style/mainlay"
                    android:id="@+id/tv6"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorblack"
                    />
            </LinearLayout>
            <TextView
                style="@style/mainlay"

                android:layout_margin="5dp"
                android:text="@string/favourtes"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_margin="5dp"
                style="@style/layout"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView

                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:textSize="20sp"
                    android:textColor="#ffae02"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/add_favourate_movies"/>

                <com.like.LikeButton

                   android:layout_height="50dp"
                    android:layout_width="0dp"

                    android:id="@+id/heart_button"
                    app:icon_size="25dp"
                    app:icon_type="heart"
                    android:layout_weight="1"
                    app:anim_scale_factor="2"
                    app:is_enabled="true"
                    app:liked="false"
                    app:circle_start_color="@color/colorPrimaryDark"
                    app:circle_end_color="#000"
                    app:like_drawable="@drawable/heart_on"
                    app:unlike_drawable="@drawable/heart_off"
                    app:dots_primary_color="#FF5722"
                    app:dots_secondary_color="@color/colorPrimaryDark"
                    android:layout_margin="5dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absolutey="170dp"/>>


            </LinearLayout>

                <TextView
                    android:layout_margin="5dp"
                    style="@style/mainlay"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/discription"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    android:layout_margin="5dp"
                    style="@style/mainlay"
                    android:id="@+id/tv5"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorblack"
                    />

        </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>